# FastNPP

./: CMakeLists.txt
benchmarks/comprehensive/: RESULTS.md  benchmark_fastnpp_vs_npp.cu
cmake/: discover_tests.cmake
cmake/libs/cuda/: archs.cmake  cuda.cmake  debug.cmake  deploy.cmake  target_generation.cmake
include/: fast_npp.h
tests/arithmetic/: fastNPP_absdiff_shift_test.cu  fastNPP_arithmetic_constant_test.cu  fastNPP_bitwise_math_test.cu  fastNPP_two_image_test.cu
tests/color/: fastNPP_color_test.cu
tests/filtering/: fastNPP_filter_test.cu
